--- a/about.Rmd
+++ b/about.Rmd
@@ -10,6 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## Academic History {.tabset .tabset-fade .tabset-pills}
+boop
 
 ### Cornell University 
 
